# atom_of_thought

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
atom_of_thought/: aot.py
